# farmmap

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start.sh
api/: deps.py  main.py  schemas.py
api/routers/: companies.py  map_data.py  stats.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ViewportStats.tsx
frontend/src/components/CompanyPanel/: CompanyPanel.tsx
frontend/src/components/FilterPanel/: FilterPanel.tsx
frontend/src/components/Map/: ChoroplethInfo.tsx  ChoroplethLayer.tsx  MapView.tsx
frontend/src/hooks/: useMapData.ts
frontend/src/stores/: index.ts
frontend/src/types/: index.ts
migrations/: env.py
migrations/versions/: 001_initial.py
pipeline/flows/: full_refresh.py  incremental.py
pipeline/geocode/: postcodes.py
pipeline/ingest/: accounts_fetcher.py  ch_api.py  ch_bulk.py
pipeline/parse/: html_parser.py  ixbrl_parser.py  pdf_parser.py  schema_mapper.py
pipeline/store/: loader.py  models.py
